# court-vision

./: .gitignore  LOG.md  README.md  pyproject.toml
courtvision/: README.md  __init__.py  align.py  ball.py  boundaries.py  boxes.py  bundle.py  chart.py  chart_ui.html  chartapp.py  cli.py  confidence.py  config.py  court.py  courtfit_auto.py  decompose.py  directions.py  endings.py  evaluate.py  events.py  export.py  extract.py  fitcourt.py  grammar.json  httpkit.py  ingest.py  landing.py  learn.py  letters.py  mcp.py  notation.py  players.py  probe.py  review.py  review_analysis.py  review_ui.html  score.py  serve.py
data/: confidence_lomo.json  confidence_model.json  scorecard_history.json  video_catalog.json
docs/: USAGE.md  _doc_style.html  benchmark.md  blueprint.html  cv18-protocol.md  data-product.html  data-product.md  landscape-2026-07.md  model-card.html  model-card.md  scorecard.html  scorecard.json  scorecard.md  scorecard_mock.html
experiments/: audio_hits.py  box_letter_audit.py  conf_coverage_autopsy.py  court_autofit.py  diag2_end_recovery.py  diag2_first_crossing.py  diag2_first_crossing_guarded.py  diag2_render_launch.py  diag2_t5_launch_forensics.py  diag2_t5_server_end.py  dir_calibrate.py  dir_signals_dev.py  events_v5.py  gen_scorecard.py  landing_spot.py  launch_gate_repair.py  launch_gate_transfer.py  learn_components.py  letter_anchor_cf.py  m0_ball_only.py  m0_box_prompt.py  m0_fix_box_format.py  m0_render_boxes.py  m0_track_rally.py  m1_clean_plate.py  m1_find_lines.py  m1_fit_court.py  m1_map_track.py  m1_render_sidebyside.py  (+95 more)
(+58 files in other folders)
