[project]
name = "court-vision"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fal-client>=1.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "omegaconf>=2.3.1",
    "opencv-python-headless>=5.0.0.93",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
